--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.url=jdbc:mysql://47.106.248.229:3306/provider?useUnicode=yes&c
 spring.datasource.password=0000
 spring.datasource.username=jgm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mail.host=smtp.163.com
+spring.mail.username=13219811544@163.com
+spring.mail.password=022997zy
+spring.mail.port=25
+spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
