HTTP请求和https请求

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.password=0000
 spring.datasource.username=jgm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mail.host=smtp.163.com
-spring.mail.username=13219811544@163.com
-spring.mail.password=022997zy
+spring.mail.username=sznsgzc@163.com
+spring.mail.password=sznsgzc123
 spring.mail.port=25
 spring.mail.protocol=smtp
 spring.mail.default-encoding=UTF-8
