--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,20 @@
       <groupId>org.springframework.boot</groupId>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <artifactId>fastjson</artifactId>
+      <groupId>com.alibaba</groupId>
+      <version>1.2.62</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
+    <dependency>
+      <artifactId>commons-email</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <version>1.5</version>
+    </dependency>
+
   </dependencies>
 
   <build>
