--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
       <groupId>com.google.guava</groupId>
       <version>21.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+    <dependency>
+      <artifactId>aspectjweaver</artifactId>
+      <groupId>org.aspectj</groupId>
+      <version>1.9.4</version>
+    </dependency>
   </dependencies>
 
   <build>
